Bug 58337 - FORMATTING Color scale> Manage - does not show, ànd corrupts the initially choosen colors (Conditional Formatting)
Summary: FORMATTING Color scale> Manage - does not show, ànd corrupts the initially ch...
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Calc (show other bugs)
Version:
(earliest affected)
4.0.0.0.beta1
Hardware: Other All
: medium normal
Assignee: Markus Mohrhard
URL:
Whiteboard: target:4.0.0.0.beta2 target:4.1.0
Keywords:
Depends on:
Blocks:
 
Reported: 2012-12-15 15:56 UTC by Cor Nouws
Modified: 2012-12-15 16:37 UTC (History)
2 users (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Cor Nouws 2012-12-15 15:56:05 UTC
Select range
Formatting > Conditional Formatting > Color Scale
Set second color different.
OK

Formatting > Conditional Formatting > Manage
Choose relevant range and Edit
 > Wrong color is shown

click OK nevertheless
 > Whole range gets first color
Comment 1 Not Assigned 2012-12-15 16:35:45 UTC
Markus Mohrhard committed a patch related to this issue.
It has been pushed to "libreoffice-4-0":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=3cfe16c598065384411ade8f9cc6603e6af35081&g=libreoffice-4-0

don't overwrite color scale information in dlg if already set, fdo#58337


It will be available in LibreOffice 4.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 2 Not Assigned 2012-12-15 16:36:22 UTC
Markus Mohrhard committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=7a3859fe23aad49ed2e046f1b822bf21add2db5c

don't overwrite color scale information in dlg if already set, fdo#58337



The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.