don't overwrite color scale information in dlg if already set, fdo#58337

Change-Id: Iaa9cc441c15acef0d5f0ee6bb230466c358e78c8